Change github username.

--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ title:              Claudia Gerez-Miranda
 logo:               # Logo image URL
 description:        Documenting my journey as a marketing analyst.
 baseurl:            '' # The subpath of your site, e.g. /blog
-url:                'https://claudiagerezmi.github.io' # The base hostname & protocol for your site
-linkedin: 	    https://www.linkedin.com/in/gerezmiranda/
-github:             https://github.com/cgerezmi
+url:                'https://claudiagerez.com' # The base hostname & protocol for your site
+linkedin: 	    https://www.linkedin.com/in/claudiagerez/
+github:             https://github.com/claudiagerezmiranda
 facebook:           https://www.facebook.com/claudia.gerez.52
 twitter:
 instagram:
