--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description:        Documenting my journey as a marketing analyst.
 baseurl:            '' # The subpath of your site, e.g. /blog
 url:                'https://claudiagerez.com' # The base hostname & protocol for your site
 linkedin: 	    https://www.linkedin.com/in/claudiagerez/
-github:             https://github.com/claudiagerezmiranda
+github:             https://github.com/claudiagerez
 facebook:           https://www.facebook.com/claudia.gerez.52
 twitter:
 instagram:
