Updated github and linkedin username.

--- a/_config.yml
+++ b/_config.yml
@@ -56,5 +56,5 @@ authors:
     gravatar: https://secure.gravatar.com/avatar/ca7b3c0d266cf63182643ae134937b51
     email:    cgerezmiranda@gmail.com
     website:  http://claudiagerez.com
-    linkedin: https://www.linkedin.com/in/gerezmiranda/
-    github:   https://github.com/cgerezmi
+    linkedin: https://www.linkedin.com/in/claudiagerez/
+    github:   https://github.com/claudiagerez
